# toy-problems

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt  driver_urban.cpp  driver_urban_c_api.cpp  driver_urban_f.f90  driver_vector_add.cpp  main.cpp  tridiagonal.cpp
cmake/: compilers.cmake
include/: DataTypes.hpp  Urban.h  UrbanAlbedo.hpp  UrbanData.hpp  UrbanDataAllocator.hpp  UrbanFluxes.hpp  UrbanLongwaveRad.hpp  UrbanRadCommon.hpp  UrbanSolarRad.hpp  urban.h
include/finclude/: UrbanMacros.h
include/kokkos_utils/: vector_add.hpp
include/private/: DataTypes.hpp  DataTypesImpl.h  UrbanData.hpp  UrbanDataAllocator.hpp  UrbanDataAllocatorImpl.h  UrbanDataImpl.h  UrbanDataTypesImpl.h  UrbanFluxes.hpp  UrbanFluxesImpl.h  UrbanImpl.h  UrbanLongwaveRad.hpp  UrbanLongwaveRadImpl.h  UrbanRadCommon.hpp  UrbanRadCommonImpl.h  UrbanSolarRad.hpp  UrbanSolarRadImpl.h
src/: CMakeLists.txt  KokkosWrappers.cpp  Urban.cpp  UrbanAlbedo.cpp  UrbanAlbedo.cpp.backup  UrbanDataAllocator.cpp  UrbanFluxes.cpp  UrbanLongwaveRad.cpp  UrbanSolarRad.cpp  kokkos_c_wrappers.cpp  urban_c_api.cpp  urban_f.mod  vector_add.cpp
src/f90-mod/: Urban.F90  urban.mod  urban_f.mod
